--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.10",
     "core-js": "^3.6.5",
+    "sass-loader": "^12.6.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.1"
   },
