--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.10",
     "core-js": "^3.6.5",
-    "sass-loader": "^12.6.0",
+    "sass": "^1.51.0",
+    "sass-loader": "10.1.1",
+    "scss": "^0.2.4",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.1",
-    "vue-flux": "^6.4.0"
+    "vue-flux": "^6.4.0",
+    "webpack": "5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
