--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "ansi-regex": "^6.0.1",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.10",
     "core-js": "^3.6.5",
+    "css-loader": "^6.7.1",
     "sass": "^1.51.0",
     "sass-loader": "10.1.1",
     "scss": "^0.2.4",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.1",
     "vue-flux": "^6.4.0",
+    "vue-owl-carousel": "^2.0.3",
+    "vue-tiny-slider": "^0.1.39",
     "webpack": "5"
   },
   "devDependencies": {
